package com.education.ztu.Task2;

public enum Gender {
    MALE, FEMALE;
}
