package com.education.ztu.Task2;

public enum Location {
    KIEV, ZHYTOMYR, VINNYTSYA, RIVNE;
}

